# LLMBackend

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  debug_wizard.py  main.py  pyproject.toml  requirements.txt  test_complex.py  test_graph.py  test_simple.py
scripts/: README.md  lint.sh  run-wizard.sh  seed-db.py  start-db.sh  stop-db.sh  test-wizard.py
wizard/: agent.py  agent_complex.py  agent_old.py  database.py  schema.py
wizard/tools/: crud.py  management.py  utils.py
