[project]
name = "database-llm-wizard"
version = "1.0.0"
description = "A shamanic coder's bridge between intention and database reality"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "openai>=1.54.0",
]

[project.optional-dependencies]
test = [
    "psycopg2-binary",
    "aiohttp",
]

[tool.uv]
dev-dependencies = [
    "psycopg2-binary",
    "aiohttp",
]