[project]
name = "llmbackend"
version = "0.1.0"
description = "Database LLM Wizard - An agentic backend for natural language database operations"
requires-python = ">=3.11"

[tool.ruff]
# Same as Black's default
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.format]
# Enable formatting of code examples in docstrings
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["wizard"]